minor css change to stop squishing git dev avatar image

--- a/git-dev-score/packages/custom/gitstats/public/assets/css/gitstats.css
+++ b/git-dev-score/packages/custom/gitstats/public/assets/css/gitstats.css
@@ -5,4 +5,6 @@
 .git-dev-avatar {
   width:245px;
   height:245px;
+  margin:0;
+  padding:0;
 }
